# git-ai

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.server-cn  LICENSE  README.md  Taskfile.yml  docker-compose.yml  flake.nix  git-ai-report-server.sqlite  install.ps1  install.sh  lefthook.yml
enterprise-server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  init.sh  test_data_isolation.sh
enterprise-server/deploy/: .env.example  README.md  docker-compose.yml
enterprise-server/migrations/: 005_linewell_org_and_test_data_v2.sql  007_project_scope_by_user_org.sql  008_default_linewell_registration_options.sql  010_backfill_metrics_rollup_fields.sql  011_developer_client_status.sql  012_developer_client_status_device_key.sql  013_version_release_assets.sql  019_metrics_rollup_dirty_scopes.sql  020_log_pagination_indexes.sql  021_admin_list_pagination_indexes.sql  022_pull_request_pagination_indexes.sql  023_department_rollup_indexes.sql  024_dashboard_aggregate_pagination_indexes.sql  025_dashboard_rollup_project_indexes.sql  026_dashboard_git_identity_index.sql  027_department_aggregate_fallback_index.sql  028_git_tracking_upload_authorization.sql  029_hierarchical_default_departments.sql  030_promote_linewell_top_level_departments.sql  031_managed_files.sql
enterprise-server/src/: config.rs  error.rs  main.rs  pagination.rs  pos_encoded.rs  routes.rs
enterprise-server/static/: auth-page-api.test.cjs  dashboard-actions.test.cjs  dashboard-api.test.cjs  dashboard-help.test.cjs  dashboard-options.test.cjs  dashboard-pagination.test.cjs  dashboard-refresh.test.cjs  dashboard-responsive.test.cjs  dashboard-router.test.cjs  dashboard.css  (+5 more)
(+453 files in other folders)
